# cryptotrader-ai

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  REVIEWERS.md  docker-compose.yml  pyproject.toml  review-findings.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.kiro/steering/: product.md  structure.md  tech.md
.specify/: feature.json  init-options.json  spex-traits.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
agent_skills/chain-analysis/: SKILL.md
agent_skills/macro-analysis/: SKILL.md
agent_skills/news-analysis/: SKILL.md
agent_skills/tech-analysis/: SKILL.md
agent_skills/trading-knowledge/: SKILL.md
brainstorm/: 00-overview.md  01-frontend-rewrite-langalpha-port.md  02-spec-016-skill-evolution-research.md  03-spec-017b-prompt-builder-integration.md  04-spec-018-memory-evolution.md  05-spec-019-skill-evolution.md  06-spec-020a-trilogy-ops.md  07-spec-020b-evolution-daemon.md  08-spec-020c-git-lineage.md  09-spec-021-pattern-cold-start.md
config/: default.toml  exchanges.toml.example  models.toml  risk.toml
config/agents/: chain.md  macro.md  news.md  tech.md
deploy/: Caddyfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EDGE_CASES.md  PRD.md  REFLECTION.md  SC-LONG-TERM-VERIFICATION.md  TRACING.md  api.md  backtest.md  configuration.md  deployment.md  frontend-architecture.md  getting-started.md  logging-conventions.md  phases.md  risk-management.md  rollback-trilogy.md
examples/: skills_demo.py  test_backtest_point.py  test_imports.py  test_supervisor.py
scripts/: benchmark_results.json  com.cryptotrader.scheduler.plist  debate_compare.py  migrate_017_to_018.py  migrate_018_to_019.py  model_benchmark.py  run_backtest.py  staging_validate.py
specs/: brainstorm-langalpha-deep-dive.md
specs/001-frontend-rewrite-langalpha-port/: IMPLEMENTATION-CHECKPOINT.md  REVIEW-CODE.md  REVIEW-PLAN.md  data-model.md  plan.md  quickstart.md  research.md  review_brief.md  spec.md  tasks.md
specs/002-price-trigger-smart-scheduling/: plan.md  spec.md  tasks.md
specs/003-chart-to-llm-pipeline/: plan.md  spec.md  tasks.md
specs/004-llm-resilience-engineering/: plan.md  spec.md  tasks.md
specs/005-analysis-loss-prevention-live-steering/: plan.md  spec.md  tasks.md
specs/006-hitl-approval-telegram-control/: plan.md  spec.md  tasks.md
specs/007-agent-configurability-registry-skills/: plan.md  spec.md  tasks.md
specs/008-mcp-standardized-data-layer/: plan.md  spec.md  tasks.md
specs/009-ws-realtime-adaptive-polling/: plan.md  spec.md  tasks.md
specs/010-architecture-review/: README.md  design.md  tasks.md
specs/011-dashboard-observability/: README.md  design.md  requirements.md  tasks.md
specs/012-frontend-prototype-alignment/: DEEP_REVIEW.md  DEEP_REVIEW_FRONTEND.md  README.md
specs/013-pair-value-object/: REVIEW-CODE.md  REVIEW-PLAN.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-agent-skills-protocol-migration/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  VERIFICATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-runtime-safety-guardrails/: spec.md
specs/016-research-skill-evolution-prior-art/: REVIEW-SPEC.md  spec.md
specs/017-agent-prompt-externalization/: REVIEW-PLAN.md  REVIEW-SPEC.md  SPEC-017B-STUB.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-agent-prompt-builder-integration/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-memory-evolution/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-skill-evolution/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-trilogy-ops/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-evolution-daemon/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-git-lineage/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-pattern-cold-start/: REVIEW-CODE.md  REVIEW-PLAN.md  REVIEW-SPEC.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: context_builder.py  dependencies.py  main.py
src/cli/: main.py
tests/: conftest.py  test_agent_config.py  test_agent_integration.py  test_agent_memory_writer.py  test_agent_registry.py  test_agent_self_scheduling.py  test_agent_timeout.py  test_anti_overfitting_equivalence.py  test_api.py  test_api_backtest_run.py  test_api_backtest_sessions.py  test_api_backtest_status.py  test_api_chat_control.py  test_api_decisions_detail.py  test_api_decisions_list.py  test_api_memory.py  test_api_memory_skills.py  test_api_metrics_summary.py  test_api_portfolio_equity_curve.py  test_api_portfolio_risk.py  test_api_portfolio_snapshot.py  test_api_risk.py  test_api_scheduler_v2.py  test_api_security_hardening.py  test_applied_pattern_parser.py  test_arch_boundary_8_1.py  test_arch_boundary_8_2.py  test_auth_failclose.py  test_backtest.py  test_backtest_session_cache.py  test_bias_cache.py  test_binance_funding_helper.py  test_calibrate.py  test_chat_agent_kind.py  test_chat_event_buffer.py  test_chat_partial_verdict.py  test_chat_task_manager.py  test_ci_workflow.py  test_classify_move_boundaries.py  test_cli_agent_list.py  (+191 more)
web/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.ts  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+440 files in other folders)
