[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptotrader-ai"
version = "0.1.0"
description = "AI-powered crypto trading system using LangGraph multi-agent debate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2",
    "langchain-anthropic>=1.3",
    "langgraph>=1.0.10",
    "ccxt>=4.5.42",
    "pandas>=2.3",
    "pandas-ta>=0.4",
    "httpx>=0.28",
    "pydantic>=2.12",
    "typer>=0.24",
    "rich>=14.0",
    "tomli>=2.0",
    "redis>=7.3",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.29",
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "numpy>=2.2",
    "streamlit>=1.55",
    "feedparser>=6.0.12",
    "structlog>=24.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=3.0",
    "ruff>=0.8",
]
ml = [
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[project.scripts]
arena = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptotrader", "src/api", "src/cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "T20",   # flake8-print
    "ASYNC", # flake8-async
    "UP",    # pyupgrade
    "RET",   # flake8-return (unnecessary elif/return)
    "SIM",   # flake8-simplify (code simplification)
    "PERF",  # perflint (performance anti-patterns)
    "PIE",   # flake8-pie (misc improvements)
    "RSE",   # flake8-raise (raise best practices)
    "RUF",   # ruff-specific rules
    "DTZ",   # flake8-datetimez (timezone-aware datetime)
    "TID",   # flake8-tidy-imports (banned imports)
    "PT",    # flake8-pytest-style
    "TCH",   # flake8-type-checking (TYPE_CHECKING imports)
    "S",     # flake8-bandit (security)
    "N",     # pep8-naming
]
ignore = [
    "S101",   # assert — used extensively in tests
    "S301",   # pickle — not used, but avoid false positives
    "S501",   # httpx verify=False — needed for some APIs
    "S110",   # try-except-pass — used for best-effort data loading
    "S105",   # hardcoded password — false positives on config field names
    "S106",   # hardcoded password in arg — false positives on config
    "RUF012", # ClassVar annotation — too strict for dataclasses
    "PT011",  # pytest.raises match — too strict for unit tests
]

[tool.ruff.lint.isort]
known-first-party = ["cryptotrader", "api", "cli"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201"]
"scripts/**/*.py" = ["T201"]
"src/cryptotrader/journal/store.py" = ["N806"]
"src/cryptotrader/portfolio/manager.py" = ["N806"]
"src/cli/main.py" = ["N806", "S104", "S603"]
# state.py uses operator, Sequence, BaseMessage at runtime inside Annotated[]
# (LangGraph calls get_type_hints() to extract channel reducers at class creation)
"src/cryptotrader/state.py" = ["TCH002", "TCH003"]
# nodes/*.py: ArenaState is inspected at runtime by LangGraph via get_type_hints()
# when functions are registered as graph nodes/conditional edges
"src/cryptotrader/nodes/*.py" = ["TCH001"]
