[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptotrader-ai"
version = "0.1.0"
description = "AI-powered crypto trading system using LangGraph multi-agent debate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.14",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2",
    "langchain-anthropic>=1.3",
    "langgraph>=1.0.10",
    "ccxt>=4.5.42",
    "pandas>=2.3",
    "httpx>=0.28",
    "pydantic>=2.12",
    "typer>=0.24",
    "rich>=14.0",
    "tomli>=2.0",
    "redis>=7.3",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.29",
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "numpy>=2.2",
    "feedparser>=6.0.12",
    "structlog>=24.1",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "nest-asyncio>=1.6.0",
    "prometheus-client>=0.20",
    "websockets>=13.0",
    "fastmcp>=3.2.0,<4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.8",
]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
arena = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptotrader", "src/api", "src/cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70 --cov-branch"

[tool.coverage.run]
omit = [
    # External data provider integrations require live API credentials and network.
    # These modules make HTTPS calls to external services (Binance, SosoValue, RSS feeds)
    # and cannot be unit-tested without integration-test infrastructure.
    "src/cryptotrader/data/sync.py",
    "src/cryptotrader/data/providers/binance.py",
    "src/cryptotrader/data/providers/rss_news.py",
    "src/cryptotrader/data/providers/sosovalue.py",
    # Alternative supervisor/agent pattern — not on the main execution path.
    "src/cryptotrader/debate/researchers.py",
    # MCP Server wrappers are thin Provider call delegates (same rationale as providers).
    "src/cryptotrader/mcp/servers/*.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "T20",   # flake8-print
    "ASYNC", # flake8-async
    "UP",    # pyupgrade
    "RET",   # flake8-return (unnecessary elif/return)
    "SIM",   # flake8-simplify (code simplification)
    "PERF",  # perflint (performance anti-patterns)
    "PIE",   # flake8-pie (misc improvements)
    "RSE",   # flake8-raise (raise best practices)
    "RUF",   # ruff-specific rules
    "DTZ",   # flake8-datetimez (timezone-aware datetime)
    "TID",   # flake8-tidy-imports (banned imports)
    "PT",    # flake8-pytest-style
    "TCH",   # flake8-type-checking (TYPE_CHECKING imports)
    "S",     # flake8-bandit (security)
    "N",     # pep8-naming
]
ignore = [
    "S101",   # assert -- used extensively in tests
    "S301",   # pickle -- not used, but avoid false positives
    "S501",   # httpx verify=False -- needed for some APIs
    "S110",   # try-except-pass -- used for best-effort data loading
    "S105",   # hardcoded password -- false positives on config field names
    "S106",   # hardcoded password in arg -- false positives on config
    "RUF012", # ClassVar annotation -- too strict for dataclasses
    "PT011",  # pytest.raises match -- too strict for unit tests
]

[tool.ruff.lint.isort]
known-first-party = ["cryptotrader", "api", "cli"]

# Banned imports: domain layer (agents/, debate/, execution/, risk/, learning/)
# must NOT import from nodes/ or graph.py (unidirectional dependency rule).
# Files outside the domain layer that legitimately import nodes/ or graph.py
# are listed below in per-file-ignores with TID251 exempted.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"cryptotrader.nodes" = {msg = "Domain layer must not import from nodes/ -- dependency direction is nodes -> domain, not the reverse."}
"cryptotrader.graph" = {msg = "Domain layer must not import from graph.py -- graph.py is the entry-point assembler above the nodes layer."}

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201"]
# Scripts are entry-layer launchers and may import graph.py / nodes (TID251 exempt).
"scripts/**/*.py" = ["T201", "TID251"]
# journal/store.py: SQLAlchemy declarative classes (Base, Row) assigned in functions
# follow class-naming convention even though N806 sees them as variables.
"src/cryptotrader/journal/store.py" = ["N806"]
# _compat.py: Central UTC/StrEnum shim for Python 3.10 runtime compatibility.
# UP042 is the same backport (Python 3.10 has no `enum.StrEnum`).
"src/cryptotrader/_compat.py" = ["UP036", "UP017", "UP042"]
# MCP Server docstrings use Chinese for tool descriptions (consumed by LLM agents)
"src/cryptotrader/mcp/servers/*.py" = ["RUF002"]
# reflect.py contains Chinese LLM prompts -- fullwidth punctuation is intentional
"src/cryptotrader/learning/reflect.py" = ["RUF001"]
# portfolio/manager.py: same SQLAlchemy declarative-class pattern as journal/store.
"src/cryptotrader/portfolio/manager.py" = ["N806", "TID251"]
# cli/main.py:
# N806 — SQLAlchemy declarative class assigned in function (Base = declarative_base()).
# S104 — uvicorn's --host default is 0.0.0.0 by design (containers expose the port).
# S603/S607 — `arena web` shells out to the user's local pnpm with hardcoded argv.
"src/cli/main.py" = ["N806", "S104", "S603", "S607", "TID251"]
# state.py uses operator, Sequence, BaseMessage at runtime inside Annotated[]
# (LangGraph calls get_type_hints() to extract channel reducers at class creation)
"src/cryptotrader/state.py" = ["TCH002", "TCH003"]
# nodes/*.py: ArenaState is inspected at runtime by LangGraph via get_type_hints()
# when functions are registered as graph nodes/conditional edges.
# TID251 exempted: nodes/ IS the orchestration layer above domain; it may reference
# sibling node modules via lazy imports without violating the boundary rule.
"src/cryptotrader/nodes/*.py" = ["TCH001", "TID251"]
# graph.py assembles the LangGraph topology from nodes.
"src/cryptotrader/graph.py" = ["TID251"]
# scheduler.py and backtest/engine.py are entry-layer orchestrators above nodes.
"src/cryptotrader/scheduler.py" = ["TID251"]
"src/cryptotrader/backtest/engine.py" = ["TID251"]
# api/routes/chat.py: SSE chat endpoint dispatches via build_chat_graph() -- the
# routes layer is entry-level above nodes/graph and may import the assembler.
"src/api/routes/chat.py" = ["TID251"]
# main.py is FastAPI entry-layer -- lifespan hook may import nodes for shutdown.
"src/api/main.py" = ["TID251"]
# tests are allowed to import any module for integration and boundary testing.
# S603 exempted: subprocess.run calls in tests invoke known, trusted CLI tools (ruff, pytest).
"tests/*.py" = ["TID251", "S603"]
